Image format changed to png

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a class="btn tiny" href="#" download>Download Brochure (PDF)</a>
         </div>
         <div class="about-card">
-          <img loading="lazy" src="Images/_DSC3554.jpg" alt="Photographer portrait placeholder"/>
+          <img loading="lazy" src="Images/DSC3554.jpg" alt="Photographer portrait placeholder"/>
         </div>
       </div>
     </section>
@@ -74,14 +74,14 @@
       <p class="muted">Hover to gently zoom; click to view full screen.</p>
       <div class="grid">
         <figure class="card"><img src="Images/brochire.png" alt="Gallery image 1" data-lightbox="Images/brochire.png"></figure>
-        <figure class="card"><img src="Images/_DSC3599.jpg" alt="Gallery image 2" data-lightbox="Images/_DSC3599.jpg"></figure>
-        <figure class="card"><img src="Images/_DSC4130.jpg" alt="Gallery image 3" data-lightbox="Images/_DSC4130.jpg"></figure>
-        <figure class="card"><img src="Images/_DSC4143.jpg" alt="Gallery image 4" data-lightbox="Images/_DSC4143.jpg"></figure>
-        <figure class="card"><img src="Images/_DSC4278.jpg" alt="Gallery image 5" data-lightbox="Images/_DSC4278.jpg"></figure>
-        <figure class="card"><img src="Images/_DSC4296.jpg" alt="Gallery image 6" data-lightbox="Images/_DSC4296.jpg"></figure>
+        <figure class="card"><img src="Images/DSC3599.jpg" alt="Gallery image 2" data-lightbox="Images/DSC3599.jpg"></figure>
+        <figure class="card"><img src="Images/DSC4130.jpg" alt="Gallery image 3" data-lightbox="Images/DSC4130.jpg"></figure>
+        <figure class="card"><img src="Images/DSC4143.jpg" alt="Gallery image 4" data-lightbox="Images/DSC4143.jpg"></figure>
+        <figure class="card"><img src="Images/DSC4278.jpg" alt="Gallery image 5" data-lightbox="Images/DSC4278.jpg"></figure>
+        <figure class="card"><img src="Images/DSC4296.jpg" alt="Gallery image 6" data-lightbox="Images/DSC4296.jpg"></figure>
         <figure class="card"><img src="Images/IMG_9844.JPG" alt="Gallery image 7" data-lightbox="Images/IMG_9844.JPG"></figure>
         <figure class="card"><img src="Images/IMG_9849.JPG" alt="Gallery image 8" data-lightbox="Images/IMG_9849.JPG"></figure>
-        <figure class="card"><img src="Images/_DSC3554.jpg" alt="Gallery image 9" data-lightbox="Images/_DSC3554.jpg"></figure>
+        <figure class="card"><img src="Images/DSC3554.jpg" alt="Gallery image 9" data-lightbox="Images/DSC3554.jpg"></figure>
       </div>
     </section>
 
@@ -194,7 +194,7 @@
 
   <footer class="site-footer">
     <div class="container foot">
-      <small>© <span id="year"></span> Lens Artistry. All rights reserved.</small>
+      <small>© <span id="year"></span> Cineboy. All rights reserved.</small>
       <nav class="foot-links">
         <a href="#about">About</a>
         <a href="#pricing">Pricing</a>
