Use different EmailJs account

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
   (function() {
-    emailjs.init("iVxuZTSpjrVX_-OK3"); // paste your Public Key here
+    emailjs.init("KuNY4wdQ2f9EMRg3E"); // paste your Public Key here
   })();
 </script>
 <body>
