Rebase + conflict resolved

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
   (function() {
-    emailjs.init("KuNY4wdQ2f9EMRg3E"); // paste your Public Key here
+    emailjs.init("lSPMq-OxJ_iNY1D5D"); // paste your Public Key here
   })();
 </script>
 <body>
@@ -213,10 +213,6 @@
       <div class="socials">
         <a href="https://www.instagram.com/cineboy_9/" target="_blank" rel="noopener" aria-label="Instagram" class="ig">
           <img src="Images/icon-instagram.svg" alt="Instagram logo">
-        </a>
-      
-        <a href="mailto:cineboy08@gmail.com" class="mail" aria-label="Email">
-          <img src="Images/icon-mail.svg" alt="Email icon">
         </a>
       
         <a href="https://wa.me/918296761081" target="_blank" rel="noopener" aria-label="WhatsApp" class="wa">
