--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <main id="top">
     <section class="hero">
       <div class="hero-inner container">
-        <h1>Timeless Wedding Stories</h1>
+        <h1>Timeless Memories</h1>
         <p>Elegant, honest, and cinematic photography — crafted with care.</p>
         <div class="cta-row">
           <a href="#portfolio" class="btn ghost">View Portfolio</a>
